addin uuid get and patch
